# PhoneAgent

./: .gitattributes  .gitignore  DEPLOYMENT.md  LICENSES_THIRD_PARTY.md  NOTICE  README.md  README_EN.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: config.yml
data/: README.md
pc_agent/: .gitignore  README.md  __init__.py  config.yaml.example  control_server.py  frp_manager.py  pc_agent_client.py  requirements.txt  start.py  websocket_client.py
pc_agent/controllers/: __init__.py  base_controller.py  mac_controller.py  windows_controller.py
phone_agent/: __init__.py
phone_agent/actions/: __init__.py  action_executor.py  handler.py  parse.py  standard_actions.py  vision_format.py
phone_agent/adb/: __init__.py  anti_detection.py  auto_reconnect.py  command_validator.py  connection.py  device.py  device_health.py  input.py  screenshot.py  smart_input.py  ui_hierarchy.py  xml_parser_v3.py  xml_tree.py  yadb.py
phone_agent/config/: __init__.py  apps.py  prompts.py
phone_agent/core/: device_init.py
phone_agent/kernel/: __init__.py  base.py  callback.py  hybrid_agent.py  protocols.py  vision_agent.py  xml_agent.py
phone_agent/logging/: __init__.py  base_logger.py  task_logger.py
phone_agent/model/: __init__.py  client.py  response_parser.py  selector.py
phone_agent/model/parsers/: __init__.py  autoglm_parser.py  base_parser.py  factory.py
phone_agent/model/providers/: __init__.py  base.py  registry.py  zhipu_provider.py
phone_agent/planning/: __init__.py  executor.py  planner.py  prompts.py
phone_agent/preprocessing/: rule_engine.py  task_preprocessor.py
scripts/install/: install_server.sh  install_server_lite.sh
server/: config.py  logging_config.py
server/api/: __init__.py  anti_detection_config.py  app.py  app_config_routes.py  model_stats.py  pc_tasks.py  planning.py  prompt_cards.py  routes.py  scrcpy.py  screenshot.py  shortcuts.py  speech_api.py
server/api/schemas/: __init__.py  device.py  task.py
server/database/: __init__.py  crud.py  init_db.py  models.py  pc_crud.py  session.py
server/middleware/: request_logger.py  timeout_monitor.py
server/models/: screenshot.py
server/pc/: __init__.py  pc_actions.py  pc_agent.py  pc_callback.py  pc_controller.py  pc_perception.py  pc_prompts.py  pc_subtask.py  pc_task.py
server/services/: __init__.py  agent_service.py  device_pool.py  device_scanner.py  model_call_tracker.py  pc_agent_service.py  port_cleanup_service.py  port_manager.py  scrcpy_manager.py  screenshot_service.py
server/tasks/: cleanup.py
server/utils/: __init__.py  image_utils.py  log_sanitizer.py  model_config_helper.py  zhipu_client.py
server/websocket/: server.py
web/: package.json
web/src/api/: index.js  request-monitor.js
web/src/components/: HumanInterventionDialog.vue  LivePreview.vue  LivePreviewH264.vue  PlanPreviewDialog.vue  PromptCardsManager.vue  TaskRealTimePreview.vue  TopNavigation.vue
web/src/stores/: device.js  task.js  websocket.js
web/src/styles/: components.css
web/src/views/: AntiDetection.vue  AppConfig.vue  Devices.vue  Home.vue  ModelStats.vue  Tasks.vue
